feat: Add dashboard functionality for displaying key business metrics, sales charts, and operational data.

--- a/frontend-app/src/app/pages/home/components/dashboard/dashboard.component.html
+++ b/frontend-app/src/app/pages/home/components/dashboard/dashboard.component.html
@@ -82,8 +82,8 @@
         <div class="filter-control">
           <ion-select [value]="timeFilter" (ionChange)="onFilterChange($event)" interface="popover">
             <ion-select-option value="week">Semana</ion-select-option>
-            <ion-select-option value="month">Mes</ion-select-option>
-            <ion-select-option value="year">Año</ion-select-option>
+            <ion-select-option value="month">Meses</ion-select-option>
+            <ion-select-option value="year">Años</ion-select-option>
           </ion-select>
         </div>
       </div>
